# data-query

./: .gitignore  main.py  pyproject.toml
data_query/: __init__.py  client.py  commands.py  manager.py  query_block.py  settings.py
data_query/utils/: queries.py  type_casting.py
db_query/: settings.py
